css/style.css
/* body {
    background-image: url("/img/cool-background\ \(1\).png");
    background-repeat: no-repeat;
    background-size: cover;
} */

body {
    background-color: #444444;
}

.navbar-brand span {
    color: #fff!important;
}

.form-control,
.form-select {
    padding: 16px 0 !important;
}

.nav-link {
    color: #fff!important;
}

#navbar {
    margin-bottom: 80px;
}

#contact-us {
    background-color: #fff!important;
}

.text-center h2 {
    margin-top: 64px!important;
}

.bg-light {
    max-height: 100vh!important;
}

#footer {
    background-image: url("/img/footer-bg.png");
    /* background-color: #444; */
}

#footer a {
    text-decoration: none;
    list-style: none;
}

#footer li {
    list-style: none;
}

li a {
    color: #000;
}

.bi-facebook,
.bi-twitter,
.bi-linkedin,
.bi-instagram {
    color: #000;
    width: 100px;
    height: 100px;
}

.bi-chevron-right {
    opacity: 0.4;
}

section {
    padding-bottom: 50px;
}

